features and data.sql

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -4,6 +4,7 @@ spring:
       enabled: true
   jpa:
     show-sql: true
+    defer-datasource-initialization: true
 security:
   oauth2:
     client:
