--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,1 +1,30 @@
+spring:
+  datasource:
+    url: jdbc:postgresql://ec2-44-196-174-238.compute-1.amazonaws.com:5432/d6sod1kb5isrul
+    username: ${DEB_DEV_USER}
+    password: ${DB_DEV_PASS}
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: true
+    defer-datasource-initialization: false
+#    properties:
+#      javax:
+#        persistence:
+#          schema-generation:
+#            create-source: metadata
+#            scripts:
+#              action: create
+#              create-target: fc.sql
 
+security:
+  oauth2:
+    client:
+      client-id: framework
+      client-secret: framewoek
+
+jwt:
+  secret: JWT-SECRET
+  duration: 86400
+server:
+  port: ${PORT:8080}
